--- a/deliverables/nomadher-frontend/package.json
+++ b/deliverables/nomadher-frontend/package.json
@@ -17,7 +17,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-elements": "^1.1.0",
     "react-native-navigation": "^2.13.1",
-    "react-native-video": "^4.4.0"
+    "react-native-video": "^4.4.0",
+    "react-navigation": "^3.3.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
