--- a/deliverables/nomadher-frontend/package.json
+++ b/deliverables/nomadher-frontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "expo": "^32.0.0",
     "expo-camera": "^3.0.0",
+    "expo-cli": "^2.11.7",
     "firebase": "^5.8.6",
     "native-base": "^2.12.1",
     "react": "16.5.0",
