--- a/deliverables/nomadher-frontend/package.json
+++ b/deliverables/nomadher-frontend/package.json
@@ -10,12 +10,14 @@
     "expo": "^32.0.0",
     "expo-camera": "^3.0.0",
     "expo-cli": "^2.11.7",
+    "expo-permissions": "^3.0.0",
     "firebase": "^5.8.6",
     "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-dom": "^16.8.4",
     "react-facebook-login": "^4.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-elements": "^1.1.0",
     "react-native-navigation": "^2.13.1",
     "react-native-video": "^4.4.0",
