prepare to deploy

--- a/deliverables/nomadher-frontend/app.json
+++ b/deliverables/nomadher-frontend/app.json
@@ -24,6 +24,15 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "csc301.team5.mvp1",
+      "versionCode": 1,
+      "permissions": []
+
+
+
+
     }
   }
 }
