--- a/deliverables/nomadher-admain/package.json
+++ b/deliverables/nomadher-admain/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.16.4",
     "firebase": "^5.9.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
