master: add camera permission

--- a/deliverables/nomadher-frontend/app.json
+++ b/deliverables/nomadher-frontend/app.json
@@ -28,7 +28,7 @@
     "android": {
       "package": "csc301.team5.mvp1",
       "versionCode": 1,
-      "permissions": []
+      "permissions": ["CAMERA"]
 
 
 
